<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sixth_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/sixth_activity_cardview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_layout_marginStart_and_left"
        android:layout_marginLeft="@dimen/cardview_layout_marginStart_and_left"
        android:layout_marginTop="@dimen/cardview_layout_marginTop"
        android:layout_marginEnd="@dimen/cardview_layout_marginEnd_and_right"
        android:layout_marginRight="@dimen/editText_layout_marginEnd_and_right"
        app:cardBackgroundColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sixth_activity_sixth_question"
            android:textSize="@dimen/text_view_textSize"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editText_layout_marginStart_and_left"
        android:layout_marginLeft="@dimen/editText_layout_marginStart_and_left"
        android:layout_marginEnd="@dimen/editText_layout_marginEnd_and_right"
        android:layout_marginRight="@dimen/editText_layout_marginEnd_and_right"
        android:layout_marginBottom="@dimen/editText_marginBottom"
        android:ems="10"
        android:hint="@string/sixth_activity_sixth_answer"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_layout_marginStart_and_left"
        android:layout_marginLeft="@dimen/button_layout_marginStart_and_left"
        android:layout_marginEnd="@dimen/button_layout_marginEnd_and_right"
        android:layout_marginRight="@dimen/button_layout_marginEnd_and_right"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:text="@string/fifth_activity_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText6" />

</android.support.constraint.ConstraintLayout>