<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eighth_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/eighth_activity_scrollview_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/scrollview_eighth_activity_marginStart_and_left"
        android:layout_marginLeft="@dimen/scrollview_eighth_activity_marginStart_and_left"
        android:layout_marginTop="@dimen/scrollview_eighth_activity_marginTop_and_bottom"
        android:layout_marginEnd="@dimen/scrollview_eighth_activity_marginEnd_and_right"
        android:layout_marginRight="@dimen/scrollview_eighth_activity_marginEnd_and_right"
        android:layout_marginBottom="@dimen/scrollview_eighth_activity_marginTop_and_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/eighth_activity_cardview_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_layout_marginStart_and_left"
                android:layout_marginLeft="@dimen/cardview_layout_marginStart_and_left"
                android:layout_marginTop="@dimen/cardview_eighth_activity_marginTop_and_bottom"
                android:layout_marginEnd="@dimen/cardview_layout_marginEnd_and_right"
                android:layout_marginRight="@dimen/cardview_layout_marginEnd_and_right"
                android:layout_marginBottom="@dimen/cardview_eighth_activity_marginTop_and_bottom"
                app:cardBackgroundColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/story_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/scrollview_textview_eighth_activity_marginStart_and_left"
                    android:layout_marginLeft="@dimen/scrollview_textview_eighth_activity_marginStart_and_left"
                    android:layout_marginTop="@dimen/scrollview_textview_eighth_activity_marginTop"
                    android:layout_marginEnd="@dimen/scrollview_textview_eighth_activity_marginEnd_and_right"
                    android:layout_marginRight="@dimen/scrollview_textview_eighth_activity_marginEnd_and_right"
                    android:layout_marginBottom="@dimen/scrollview_textview_eighth_activity_marginBottom"
                    android:textSize="@dimen/scrollview_textview_eighth_activity_textSize"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_layout_marginStart_and_left"
                android:layout_marginLeft="@dimen/editText_layout_marginStart_and_left"
                android:layout_marginTop="@dimen/textview_eighth_activity_marginTop"
                android:layout_marginEnd="@dimen/editText_layout_marginEnd_and_right"
                android:layout_marginRight="@dimen/editText_layout_marginEnd_and_right"
                android:layout_marginBottom="@dimen/textview_eighth_activity_marginBottom"
                android:text="@string/eigth_activity_email_story"
                android:textSize="@dimen/textview_eighth_activity_textsize"
                app:layout_constraintBottom_toTopOf="@+id/editText8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eighth_activity_cardview_story"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_layout_marginStart_and_left"
                android:layout_marginLeft="@dimen/editText_layout_marginStart_and_left"
                android:layout_marginEnd="@dimen/editText_layout_marginEnd_and_right"
                android:layout_marginRight="@dimen/editText_layout_marginEnd_and_right"
                android:layout_marginBottom="@dimen/edittext_and_button_eighth_activity_marginBottom"
                android:ems="10"
                android:hint="@string/eigth_activity_eigth_answer"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_textView" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_layout_marginStart_and_left"
                android:layout_marginLeft="@dimen/button_layout_marginStart_and_left"
                android:layout_marginEnd="@dimen/button_layout_marginEnd_and_right"
                android:layout_marginRight="@dimen/button_layout_marginEnd_and_right"
                android:layout_marginBottom="@dimen/edittext_and_button_eighth_activity_marginBottom"
                android:text="@string/eigth_activity_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText8" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>